--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 </head>
-<body>
+<body id="body">
 	<!-- Header ------ -->
 	<header class="header">
 		<div class="header__contacts contacts-header">
@@ -246,7 +246,8 @@
 			<div class="form__name"><input type="text" placeholder="Your Name"></div>
 			<div class="form__number"><input type="text" placeholder="Contact Number"></div>
 			<div class="form__company-name"><input type="text" placeholder="Company Name"></div>
-			<div class="form__butn-submit"><input type="submit" name="submit" value="SUBMIT NOW"></div>
+			
+			<div class="form__butn-submit"><button type="submit">SUBMIT NOW</button></div>
 			<div class="form__butn-close"></div>
 		</form>	
 		</div>
@@ -264,7 +265,7 @@
 			<div class="getIn__subtext">Subscribe to our newsletter to stay update with what is new</div>
 			<form action="#" class="getIn__form">	
 				<div class="getIn__input"><input type="text" placeholder="Email Address"></div>
-				<div class="getIn__butn"><input type="submit" value="Subscribe"></div>
+				<div class="getIn__butn"><button type="submit">Subscribe</button></div>
 			</form>
 		</div>
 	</div>
